feat: 목표생성/태스크/일정/가용시간/재계획 관련 내용 수정
• 학습 관리 백엔드 구조를 아래 방향으로 변경했습니다.

  - 가용시간은 회원 공용이 아니라 목표별로 관리합니다.
  - 가용시간은 개별 CRUD 대신 PUT으로 전체 교체합니다.
  - 목표·가용시간·일반 후보 태스크 편집은 태스크 확정 전까지만 가능합니다.
  - 후보 태스크 생성 시 목표 내용, 필수 학습 주제, 가용시간을 AI에 전달합니다.
  - 후보 태스크 총 시간과 목표 기간 내 가용시간을 비교하는 용량 상태 API를 추가했습니다.
  - 후보 확정 시 확정 태스크 전환과 일정 생성을 하나의 처리로 묶었습니다.
  - 일정은 실제 요일별 시간 창을 기준으로 태스크를 분할 배치합니다.
  - 확정 태스크는 조회·미완료 삭제만 가능하며, 완료된 일정이 있으면 삭제할 수 없습니다.
  - 일정 상태는 PENDING, IN_PROGRESS, FAILED, FINISHED 기준으로 관리합니다.
  - 재계획 기능을 추가했습니다.
      - 변경 가용시간은 임시 재계획안에 저장
      - 기존 일정은 사용자 확정 전까지 유지
      - 확정 시 완료 이력은 보존하고 미완료 일정·태스크만 새 계획으로 교체
      - 취소 시 기존 계획 유지

  - 기존 일일 학습시간, 가능 요일 문자열, 집중분야, 일정 AI 배정, 목표 기간 연장 등 구형 로직은 제거했습니다.